package utn.frre.lab2;

import java.util.Date;

public class Hito extends TaskBase {
    public Hito(int id, String name, Date startDate) {
        super(id, name, startDate);
    }
}
