package utn.frre.lab2;

public class ProjectCustomException extends RuntimeException {
    public ProjectCustomException(String msg) {
        super(msg);
    }
}
