package utn.frre.lab2;

import java.sql.Date;
import java.time.Instant;
import java.time.LocalDate;

public class TestProject {
    public static void main(String[] args) {

    }
}
