@startuml

title __PROJECTSADMIN's Class Diagram__\n

  package utn.frre.lab2 {
    class Hito {
    }
  }
  

  package utn.frre.lab2 {
    interface ICalculable {
    }
  }
  

  package utn.frre.lab2 {
    class Programmer {
    }
  }
  

  package utn.frre.lab2 {
    class Project {
    }
  }
  

  package utn.frre.lab2 {
    class ProjectCustomException {
    }
  }
  

  package utn.frre.lab2 {
    abstract class Resource {
    }
  }
  

  package utn.frre.lab2 {
    class Summary {
    }
  }
  

  package utn.frre.lab2 {
    class Task {
    }
  }
  

  package utn.frre.lab2 {
    abstract class TaskBase {
    }
  }
  

  package utn.frre.lab2 {
    abstract class TaskGroup {
    }
  }
  

  package utn.frre.lab2 {
    class TestProject {
    }
  }
  

  Hito -up-|> TaskBase
  Programmer -up-|> Resource
  Project -up-|> TaskGroup
  Summary -up-|> TaskGroup
  Task -up-|> TaskGroup
  TaskBase o-- TaskBase : nextTask
  TaskGroup -up-|> ICalculable
  TaskGroup -up-|> TaskBase


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
